Feature/default preset (#187)
* Added new default keyboard and gamepad mappings
* Moved the original mappings to a classic preset

--- a/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
+++ b/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
@@ -676,7 +676,16 @@
                     }
 
                     //Get the configuration state
-                    self.set("isCustomConfig", sessionStorage.getItem("isCustomConfig"));
+                    var cachedCustomConfigStatus = (sessionStorage.getItem("isCustomConfig") === 'true');
+
+                    if(cachedCustomConfigStatus !== undefined)
+                    {
+                        self.set("isCustomConfig", cachedCustomConfigStatus);
+                    }
+                    else
+                    {
+                        self.set("isCustomConfig", false);
+                    }
                     
                 },
 
