--- a/src/plugins/new-ui/public/webcomponents/depth.html
+++ b/src/plugins/new-ui/public/webcomponents/depth.html
@@ -16,7 +16,7 @@
         margin-top: -0.6vw;
       }
       #depth {
-        font-size: 1.35vw;
+        font-size: 1.42vw;
         font-weight: bold;
         text-align: left;
       }
@@ -144,7 +144,7 @@
           <span>{{formatDepth(depth)}}</span>
           <span id="depth-unit"> {{depthUnit}} </span>
           </div>
-          <div id="depthTarget" title="Depthhold target depth" class="center text-center hidden">{{__('Target Depth: ')}}{{target}}</div>
+          <div id="depthTarget" title="Depthhold target depth" class="center text-center hidden">{{__('Target: ')}}{{target}}</div>
         </div>
         
       </div>
